--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/3dEye-master/3deye.js"></script>
+  <!-- <script type="text/javascript" src="assets/3dEye-master/3deye.js"></script> -->
 </body>
 </html>
